--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  width: 70%;
+  height: 700px;
+  margin: 0 auto;
+  background-color: aqua;
+  border-radius: 10px;
+}
+
+img {
+  width: 30px;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  margin: 10px 10px;
+  border-radius: 10px;
+  background-color: aliceblue;
+  padding: 10px;
 }
