--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 .container {
-  width: 70%;
+  width: 55%;
   height: 700px;
   margin: 10px auto;
   background-color: rgb(44, 44, 255);
@@ -41,11 +41,27 @@ h1 {
   border-radius: 10px;
   background-color: chartreuse;
   cursor: pointer;
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.container-input:hover button {
+  background-color: rgba(128, 255, 0, 0.856);
 }
 
 img {
   width: 35px;
   cursor: pointer;
+  opacity: 0;
+  transition: 0.5s ease-in-out;
+}
+
+ul {
+}
+
+.taks:hover img {
+  opacity: 1;
 }
 
 ul li {
